--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Fetch and Embed</title>
+    <title>NewTab</title>
     <style>
         body {
             font-family: Arial, sans-serif;
