--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             color: #ffffff;
             display: flex;
             flex-direction: column;
-            position: relative;
+            height: 100vh;
+            overflow: hidden;
         }
         #sidebar {
             position: fixed;
@@ -84,10 +85,10 @@
         }
         iframe {
             width: 100%;
-            height: 100vh;
+            height: 100%;
             background-color: #fff;
+            border: none;
             display: none;
-            border-radius: 5px;
         }
         #next-screen-button {
             position: fixed;
@@ -132,7 +133,7 @@
     </div>
     <div id="output-container">
         <div id="output"></div>
-        <iframe id="website-iframe" src="about:blank" sandbox="allow-same-origin allow-scripts"></iframe>
+        <iframe id="website-iframe" src="about:blank" sandbox="allow-same-origin allow-scripts allow-top-navigation allow-forms allow-pointer-lock"></iframe>
     </div>
     <button id="next-screen-button">Go to Google Doc</button>
 
@@ -193,7 +194,7 @@
             newIframe.style.width = '100%';
             newIframe.style.height = '100%';
             newIframe.src = url;
-            newIframe.sandbox = 'allow-same-origin allow-scripts'; // Add sandbox
+            newIframe.sandbox = 'allow-same-origin allow-scripts allow-top-navigation allow-forms allow-pointer-lock'; // Add sandbox
 
             newWindow.document.body.appendChild(newIframe);
             logOutput('Embedding website in new tab...');
