--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@
 
         nextScreenButton.addEventListener('click', () => {
             outputDiv.innerHTML = '';
-            const docUrl = "https://docs.google.com/document/d/17ac7vGx49IOY23yPEccJA7uxSk-byvI2OkpiPHxeMjs/edit";
+            // const docUrl = "https://docs.google.com/document/d/17ac7vGx49IOY23yPEccJA7uxSk-byvI2OkpiPHxeMjs/edit";
+            const docUrl = "https://broken9999.github.io/embed.github.io/";
             iframe.src = docUrl;
             iframe.style.display = 'block';
             logOutput('Loading Google Doc...');
